--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "bpmn-js": "^18.9.1",
     "bpmn-js-properties-panel": "^5.45.0",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "jspdf": "^4.0.0"
   },
   "resolutions": {
     "react": "^18.2.0",
