--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "bpmn-js": "^18.9.1",
+    "bpmn-js-create-append-anything": "^1.1.0",
     "bpmn-js-properties-panel": "^5.45.0",
     "classnames": "^2.2.6",
     "jspdf": "^4.0.0"
