--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bpmn-js-color-picker": "^0.7.2",
     "bpmn-js-create-append-anything": "^1.1.0",
     "bpmn-js-properties-panel": "^5.45.0",
+    "bpmn-js-token-simulation": "^0.38.2",
     "classnames": "^2.2.6",
     "jspdf": "^4.0.0"
   },
