--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "@mendix/pluggable-widgets-tools": "^10.15.0"
   },
   "dependencies": {
+    "@bpmn-io/properties-panel": "^3.36.0",
     "bpmn-js": "^18.9.1",
     "bpmn-js-color-picker": "^0.7.2",
     "bpmn-js-create-append-anything": "^1.1.0",
-    "bpmn-js-properties-panel": "^5.45.0",
+    "bpmn-js-properties-panel": "^5.48.0",
     "bpmn-js-token-simulation": "^0.38.2",
     "classnames": "^2.2.6",
     "jspdf": "^4.0.0"
